--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "nanoid": "^5.1.6",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.0.14"
